<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".event.EventEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@color/black"/>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/bt_back_lesson"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/bt_arrow_left"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,VisualLintButtonSize,TextContrastCheck" />

            <TextView
                android:id="@+id/title_event"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:text="@string/lb_title_event"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/lb_event_name"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/lb_add_new_event"
            android:inputType="text"
            android:padding="14dp"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lb_select_date"
                android:layout_marginHorizontal="30dp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_save_event"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bt_default"
            android:text="@string/bt_save"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

    </LinearLayout>
</ScrollView>





