<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".authentication.NewRegister">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@color/black"/>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bt_back"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_arrow"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_new_register"
                    android:layout_marginEnd="35dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCoordinatorLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/linearLayout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/title_account"
                android:textColor="@color/gray_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lb_name_user"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_creator_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:background="@drawable/txt_edit"
                android:hint="@string/placeholder_username"
                android:inputType="textCapWords"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lb_email_user"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_creator_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lb_password_user"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_creator_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit"
                android:hint="@string/placeholder_password"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lb_confirm_password_user"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit"
                android:hint="@string/placeholder_password"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:indeterminateTint="@color/yellow"
                android:visibility="invisible"
                tools:visibility="visible"/>

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/buttonCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/green"
            app:contentInsetStart="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_new_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bt_action_in"
                android:text="@string/bt_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>