<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Setting">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@color/black"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            app:navigationIcon="@drawable/ic_arrow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="65dp"
                android:gravity="center_horizontal"
                android:text="@string/title_setting"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCoordinatorLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/linearLayout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/title_account"
                android:textColor="@color/gray_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lb_name_user"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit_auth"
                android:hint="@string/placeholder_username"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/lb_email_user"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit_auth"
                android:importantForAutofill="no"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/lb_confirm_password_user"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit_auth"
                android:maxLength="6"
                android:hint="@string/placeholder_password"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:background="?actionBarDivider"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_gravity="center"
                android:text="@string/title_account_delete"
                android:textColor="@color/gray_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"  />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/bt_action_out"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:text="@string/bt_delete_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/green"
                android:visibility="invisible"
                tools:visibility="visible"/>

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/buttonCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/green"
                app:contentInsetStart="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_save"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bt_action_in"
                    android:text="@string/bt_save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

            </com.google.android.material.bottomappbar.BottomAppBar>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>