<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".authentication.RecoverPassword">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@color/black"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:navigationIcon="@drawable/ic_arrow">

        <TextView
            android:id="@+id/title_recover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:gravity="center_horizontal"
            android:text="@string/title_recover_password"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/lb_email_user"
                android:textColor="@color/dark_gray"/>

            <EditText
                android:id="@+id/txt_recover_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_edit_auth"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_send_recover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/bt_action_radius"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:text="@string/bt_send"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/yellow"
                android:visibility="invisible"
                tools:visibility="visible"/>
        </LinearLayout>
</LinearLayout>